Fix the flex wrap container issue

--- a/themes/mew5/source/css/mew-desktop.styl
+++ b/themes/mew5/source/css/mew-desktop.styl
@@ -5,6 +5,7 @@
 
   .d-flex
     display: flex
+    flex-wrap: wrap;
 
   .justify-content-center
     justify-content: center
